--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Notki</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_add_sample_data">Add Data</string>
     <string name="title_activity_edit">EditActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
