commit 16 dodana moznowość edytowania notek

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_delete_all">Delete All</string>
+    <string name="notes_id_key">notes_id_key</string>
 </resources>
